--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 .header {
     background: #0d6efd;
     color: #fff;
-    padding: 40ps 20px;
+    padding: 40px 20px;
     text-align: center;
 
 }
@@ -25,8 +25,8 @@ main {
 
 }
 
-.services,
-.contact {
+.servicos,
+.contato {
     background: #fff;
     margin-bottom: 20px;
     padding: 20px;
@@ -34,13 +34,17 @@ main {
 
 }
 
-.services ul {
-    list-style: nome;
+.servicos ul {
+    list-style: none;
     margin-top: 10px;
 
 
 }
 
+.servicos li{
+    padding: 8px 0;
+
+}
 form {
     display: flex;
     flex-direction: column;
@@ -60,7 +64,7 @@ button {
     color: #fff;
     border: none;
     cursor: pointer;
-
+    border-radius: 4px;
 }
 
 button:hover {
@@ -92,10 +96,16 @@ footer {
 
 }
 
+.nav a:hover{
+    text-decoration: underline;
+}
+
 .hero {
     margin-top: 30px;
 
 }
+
+
 
 @media (min-width: 768px) {
     main {
